--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
-@import './styles/variables.scss';
-@import './styles/breakpoints.scss';
+@import './styles/main.scss';
+
 
 body {
   margin: 0;
@@ -9,9 +9,4 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
