mobile design home screen

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,10 @@
 @import './styles/main.scss';
 
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -10,3 +14,4 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
