home layout mobile

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,11 +1,9 @@
 .home {
     box-sizing: border-box;
-
     .header {
         padding: 16px;
         background-color: $brand-01;
         color: white;
-
         .highlighted {
             font-weight: 700;
             font-style: italic;
@@ -25,6 +23,7 @@
 
             .arrow-icon {
                 font-size: 26px;
+                margin-left: 24px;
             }
         }
 
@@ -41,6 +40,7 @@
     }
 
     .works {
-
+        grid-template-columns: 1fr;
     }
 }
+
