grid layout home

--- a/src/components/Work/Work.scss
+++ b/src/components/Work/Work.scss
@@ -4,5 +4,6 @@
         width: 100%;
         border-radius: 8px;
         box-shadow: 2px 4px 4px rgba(0, 0, 0, .4);
+        max-width: 350px;
     }
 }
