underline effect changed

--- a/assets/css/transitions.css
+++ b/assets/css/transitions.css
@@ -7,3 +7,20 @@
 .page-leave-to {
     opacity: 0;
 }
+
+.underline-transition {
+    @apply inline-block;
+}
+
+.underline-transition::after {
+    content: '';
+    @apply w-0;
+    height: 2px;
+    @apply block;
+    @apply bg-current;
+    @apply duration-300;
+}
+
+.underline-transition:hover::after {
+    @apply w-full;
+}
