--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -2,3 +2,11 @@
     font-family: 'young';
     src: url('~assets/fonts/YoungSerif-Regular.otf') format("opentype");
 }
+
+@font-face {
+    font-family: 'rubik';
+    src: url('~assets/fonts/Rubik-VariableFont_wght.ttf') format("truetype supports variations"),
+        url('~assets/fonts/Rubik-VariableFont_wght.ttf') format("truetype-variations");
+    font-weight: 100 1000;
+    font-stretch: 25% 151%;
+}
