--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -1,6 +1,7 @@
 @font-face {
     font-family: 'young';
     src: url('~assets/fonts/YoungSerif-Regular.otf') format("opentype");
+    font-display: swap;
 }
 
 @font-face {
@@ -9,4 +10,5 @@
         url('~assets/fonts/Rubik-VariableFont_wght.ttf') format("truetype-variations");
     font-weight: 100 1000;
     font-stretch: 25% 151%;
+    font-display: swap;
 }
