--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -1,14 +1,16 @@
 @font-face {
-    font-family: 'young';
-    src: url('~assets/fonts/YoungSerif-Regular.otf') format("opentype");
-    font-display: swap;
+  font-family: 'young';
+  src: url('~assets/fonts/YoungSerif-Regular.otf') format('opentype');
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'rubik';
-    src: url('~assets/fonts/Rubik-VariableFont_wght.ttf') format("truetype supports variations"),
-        url('~assets/fonts/Rubik-VariableFont_wght.ttf') format("truetype-variations");
-    font-weight: 100 1000;
-    font-stretch: 25% 151%;
-    font-display: swap;
+  font-family: 'karla';
+  src: url('~assets/fonts/Karla-VariableFont_wght.ttf')
+      format('truetype supports variations'),
+    url('~assets/fonts/Karla-VariableFont_wght.ttf')
+      format('truetype-variations');
+  font-weight: 100 1000;
+  font-stretch: 25% 151%;
+  font-display: swap;
 }
