--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'young';
   src: url('~assets/fonts/YoungSerif-Regular.otf') format('opentype');
-  font-display: swap;
+  font-display: auto;
 }
 
 @font-face {
@@ -12,5 +12,5 @@
       format('truetype-variations');
   font-weight: 100 1000;
   font-stretch: 25% 151%;
-  font-display: swap;
+  font-display: auto;
 }
